Fixing the dropdown menu not showing error

--- a/bias_visualisation_app/static/css/materialize.css
+++ b/bias_visualisation_app/static/css/materialize.css
@@ -5023,8 +5023,8 @@ small {
 .tabs {
   /*position: relative;*/
   /*overflow-x: auto;*/
-  position: absolute;
-  overflow-x: scroll;
+  position: relative;
+  overflow-x: auto;
   overflow-y: hidden;
   height: 48px;
   width: 100%;
@@ -5083,7 +5083,6 @@ small {
   height: 100%;
   padding: 0 24px;
   font-size: 14px;
-  /*text-overflow: ellipsis;*/
   text-overflow: ellipsis;
   -webkit-transition: color .28s ease, background-color .28s ease;
   transition: color .28s ease, background-color .28s ease;
